[package]
name = "iforgot"
version = "0.1.0"
authors = ["Andy Min <andrewkmin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
dirs = "2.0.2"
colored = "1.9.0"
termion = "1.5.4"